# cp-class

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpclass.c  cpclass.h  main.c
class_files/constant/: class_constants.h
cmake/modules/: FindTHREAD_DB.cmake
common/: common_type.h
endian_swap/: endian_swap.h
example/: main.c
src/: CMakeLists.txt  cpclass.c  cpclass.h  main.c
src/class_files/constant/: CMakeLists.txt  class_constants.c
src/common/: CMakeLists.txt  common_type.c
src/cp_class/: CMakeLists.txt  cpclass.c  cpclass.h
src/endian_swap/: CMakeLists.txt  endian_swap.c  endian_swap.h
src/example/: CMakeLists.txt  main.c
src/utils/utf_8_tools/: CMakeLists.txt  utf_8_tools.c
utils/utf_8_tools/: utf_8_tools.c  utf_8_tools.h
